fixed sections overlapping + padding on navbar

--- a/main.css
+++ b/main.css
@@ -28,6 +28,7 @@ nav {
     position: sticky;
     top: 0px;
     background-color: rgba(25, 38, 68, 0.5);
+    padding-top: .5rem;
     padding-right: 2rem;
     justify-content: right;
     align-items: center;
@@ -61,11 +62,11 @@ a:hover {
 
 /* SECTION - GENERAL */
 section {
-    padding-top: 6vh;
-    height: 94vh;
-    margin: 0 10rem;
+    /* position: relative; */
+    padding-bottom: 6vh;
+    min-height: 94vh;
+    margin: fit-content fit-content;
     box-sizing: border-box;
-    min-height: fit-content;
 }
 
 .section-container {
@@ -77,7 +78,7 @@ section {
     display: flex;
     justify-content: center;
     gap: 5rem;
-    height: 75vh;
+    min-height: fit-content;
 }
 
 .profile-img-container {
@@ -156,7 +157,7 @@ section {
     position: relative;
     margin-top: 8rem;
     gap: 5rem;
-    height: 75vh;
+    min-height: fit-content;
 }
 
 .about-containers, .about-details-container {
@@ -167,11 +168,13 @@ section {
 .about-containers {
     margin-top: 2rem;
     margin-bottom: 2rem;
+    margin-left: 7rem;
+    margin-right: 7rem;
 }
 
 .about-text-container {
     font-size: 1.75rem;
-    margin: 15px;
+    margin-right: 2rem;
     max-width: 1000px;
 }
 
@@ -182,16 +185,17 @@ section {
     max-width: 400px;
     min-width: 400px;
     border-radius: 15px;
+    margin-left: 2rem;
     overflow: hidden;
     margin: auto;
 }
 
-/* EXPERIENCE */
-#experience {
+/* TECH */
+#tech {
     position: relative;
     margin-top: 8rem;
     gap: 5rem;
-    height: 75vh;
+    min-height: fit-content;
 }
 
 .card-containers {
@@ -250,6 +254,13 @@ section {
 }
 
 /* PROJECTS */
+#projects {
+    position: relative;
+    margin-top: 8rem;
+    gap: 5rem;
+    min-height: fit-content;
+}
+
 /*
 .project-img-container {
     
@@ -258,6 +269,13 @@ section {
 
 
 /* CONNECT */
+#connect {
+    position: relative;
+    margin-top: 8rem;
+    gap: 5rem;
+    min-height: fit-content;
+}
+
 .connect-containers, .connect-text-container {
     display: flex;
     justify-content: center;
